# TicketingSystem

./: .gitignore  README.md  bootstrap_script.py  main.py  pyproject.toml  test_dns.py  utils.py
Database/: db.py  migrate.py  schema.md
Hotels/: booking.py  structure.py
Users/: user.py
api/: hotel_routes.py  models.py  room_routes.py  user_routes.py  utils.py
migrations/: 01_init.sql  02_add_timestamps_to_rooms_and_users.sql
tests/: test_hotel_routes.py  test_models.py  test_user_routes.py
tests/__pycache__/: test_models.py
