[project]
name = "ticketingsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "supabase>=2.24.0",
]

[project.optional-dependencies]
testing = ["pytest>=8"]
