[project]
name = "ticketingsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "psycopg[binary]>=3.2.1",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
    "packaging<=21.3",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
testing = ["pytest>=8"]
